Enable native access for Notification integration tests